# recursion-schemes

./: .gitignore  .travis.yml  CHANGELOG.markdown  LICENSE  Makefile  README.markdown  Setup.lhs  cabal.haskell-ci  cabal.project  recursion-schemes.cabal
.github/workflows/: haskell-ci.yml
Data/Functor/: Base.hs  Foldable.hs
Data/Functor/Foldable/: TH.hs
Data/Recursion/: Cata.hs
docs/: flowchart.dot
examples/: Expr.hs
include/: recursion-schemes-common.h
src/: RecursionSchemes.hs
src/Data/Functor/: Base.hs  Foldable.hs
src/Data/Functor/Foldable/: TH.hs
src/RecursionSchemes/: Custom.hs  Hylo.hs  Internal.hs
src/RecursionSchemes/Custom/: Gather.hs  Scatter.hs
src/RecursionSchemes/Internal/: Gather.hs  Scatter.hs
test/: doctest-driver.hs
tests/: Main.hs
